# NSU_courses

./: .gitignore
2 course/Parallel programming/2/: Matrix.cpp  main.cpp  main_mpi.cpp  matrix_op.cpp  matrix_op.h  matrix_vector_gen.cpp
2 course/Parallel programming/4/: Solution.cpp  Solution.h
2 course/Parallel programming/5/: LifeConway.h  main.cpp
2 course/Parallel programming/6/: CMakeLists.txt  Task.cpp  Task.h  Tasks_list.cpp
2 course/Probability And Statistics/: N.txt  U.txt  main.py  my_functions.py
2 course/Probability and statistics/: 1.ipynb  2.ipynb  3 4.ipynb
2 course/osi/1/: dynamic_hello.c  hello  hello.c  hello.h  main.c  main1.c
2 course/osi/2/: hello  hello_syscal  hello_write  main.c  main_syscal.c  main_syscal.s  main_write.c  strace.txt
2 course/osi/4/: CMakeLists.txt  Utils.cpp  Utils.h  a.cpp  a.h  a.out  b.cpp  b.h  c.cpp  c.h  main.cpp  testMain.cpp
2 course/osi/5/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
2 course/parallel programming/1/: 2vectors1.cpp  2vectors2.cpp  2vectors_default.cpp  main.cpp
2 course/parallel programming/2/: main_mpi_diff.cpp
3 course/DiscreteAlgo/: CMakeLists.txt  all_4_edges_tournaments.txt  all_5_edges_tournaments.txt  brutdorce_with_delete.txt  graph.h  graph_brutforce.cpp  graph_brutforce.h  graph_equal.cpp  graph_equal.h  in_anticountour.txt  main.cpp  main_calc_anticontours.cpp  Новый текстовый документ (2).txt
3 course/Osi/proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  main.cpp
3 course/Seti/: lab_03.md  main.py
3 course/Tpns/: digits.ipynb  laptops.ipynb  main.py  mushrooms.ipynb
(+139 files in other folders)
